--- a/src/App.css
+++ b/src/App.css
@@ -11,24 +11,26 @@ body {
   background-color: rgb(104, 104, 104);
 }
 h1 {
+  position: absolute;
   text-align: center;
   margin-top: 20px;
   color: aliceblue;
 }
 form {
-  position: fixed;
+  position: absolute;
+  top:100px;
   bottom: 500px;
   right: 30%;
   left: 30%;
   border-radius: 8px;
-  border: 2px solid rgb(66, 66, 180);
+  /* border: 2px solid rgb(66, 66, 180); */
   color: #000;
-  box-shadow: 0 2px 4px 4px rgba(0, 0, 0, 0.5);
+  /* box-shadow: 0 2px 4px 4px rgba(0, 0, 0, 0.5); */
 }
 
 .items {
-  position: fixed;
-  top: 50px;
+  position: absolute;
+  top: 100px;
   right: 30%;
   left: 30%;
   border-radius: 8px;
